fixed issue with modal not covering entire screen when scrolled

--- a/src/global.scss
+++ b/src/global.scss
@@ -17,7 +17,7 @@ p {
 }
 
 .modal {
-	position: absolute;
+	position: fixed;
 	z-index: 999;
 	height: 103%;
 	width: 100%;
